--- a/app/src/main/res/xml/filepaths.xml
+++ b/app/src/main/res/xml/filepaths.xml
@@ -16,5 +16,7 @@
   -->
 
 <paths>
-    <external-files-path name="share" path="."/>
+    <external-files-path
+        name="share"
+        path="." />
 </paths>
