--- a/app/src/main/res/layout/custom_num_pad.xml
+++ b/app/src/main/res/layout/custom_num_pad.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2024  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -33,7 +32,6 @@
         android:focusable="false"
         android:gravity="center"
         android:hint="-"
-        tools:text="8"
         android:importantForAutofill="no"
         android:inputType="none"
         android:lines="1"
@@ -45,7 +43,8 @@
         android:textIsSelectable="false"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        tools:text="8" />
 
     <LinearLayout
         android:layout_width="wrap_content"
