--- a/app/src/main/res/layout/dialog_edit_names_fragment.xml
+++ b/app/src/main/res/layout/dialog_edit_names_fragment.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2024  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -24,8 +23,8 @@
     android:fadeScrollbars="false"
     android:fadingEdgeLength="@dimen/standard_margin"
     android:requiresFadingEdge="vertical"
-    android:scrollbars="vertical"
-    android:scrollIndicators="end">
+    android:scrollIndicators="end"
+    android:scrollbars="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -51,11 +50,11 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:gravity="center_horizontal"
-                    android:textStyle="bold|italic"
                     android:inputType="textPersonName|textAutoComplete|textCapWords"
                     android:maxLength="60"
                     android:maxLines="2"
-                    android:selectAllOnFocus="true" />
+                    android:selectAllOnFocus="true"
+                    android:textStyle="bold|italic" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
