--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright © 2024  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
@@ -16,29 +15,29 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawerLayoutMain"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".app.screens.MainActivity"
-    tools:openDrawer="start">
-
-    <FrameLayout
-        android:id="@+id/frameLayoutMain"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawerLayoutMain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/navigationViewMain"
-        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/grayLight"
-        app:headerLayout="@layout/main_drawer_header"
-        app:itemIconTint="@color/grayMM"
-        app:itemTextColor="@color/grayMM"
-        app:menu="@menu/main_drawer_menu" />
+        tools:context=".app.screens.MainActivity"
+        tools:openDrawer="start">
+
+        <FrameLayout
+            android:id="@+id/frameLayoutMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navigationViewMain"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/grayLight"
+            app:headerLayout="@layout/main_drawer_header"
+            app:itemIconTint="@color/grayMM"
+            app:itemTextColor="@color/grayMM"
+            app:menu="@menu/main_drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
