--- a/app/src/main/res/layout/game_dialog_hu_fragment.xml
+++ b/app/src/main/res/layout/game_dialog_hu_fragment.xml
@@ -14,135 +14,128 @@
   ~     You should have received a copy of the GNU General Public License
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:fadeScrollbars="false"
+    android:fadingEdgeLength="@dimen/standard_margin"
+    android:requiresFadingEdge="vertical"
+    android:scrollIndicators="end"
+    android:scrollbars="vertical"
     tools:background="@color/blackTransparent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/standard_margin"
+        android:layout_gravity="center"
         app:cardBackgroundColor="@color/grayLight"
         app:cardCornerRadius="@dimen/half_standard_margin"
         app:cardMaxElevation="8dp"
         app:contentPadding="@dimen/standard_margin">
 
-        <ScrollView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fadeScrollbars="false"
-            android:fadingEdgeLength="@dimen/standard_margin"
-            android:requiresFadingEdge="vertical"
-            android:scrollIndicators="end"
-            android:scrollbars="vertical">
+            android:gravity="center_horizontal">
 
-            <RelativeLayout
+            <TextView
+                android:id="@+id/tvGameHuDialogWinnerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:text="@string/winner_"
+                android:textColor="@color/grayMM" />
+
+            <include
+                android:id="@+id/iGameHuDialogWinnerContainer"
+                layout="@layout/custom_table_seat_medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvGameHuDialogWinnerText"
+                android:layout_centerHorizontal="true" />
+
+            <View
+                android:id="@+id/vGameHuDialogSeparator1"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/iGameHuDialogWinnerContainer"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:background="@color/gray" />
+
+            <TextView
+                android:id="@+id/tvGameHuDialogDiscarderText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/vGameHuDialogSeparator1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="@dimen/half_standard_margin"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:layout_marginEnd="@dimen/half_standard_margin"
+                android:layout_marginBottom="@dimen/half_standard_margin"
+                android:text="@string/discarder_"
+                android:textColor="@color/grayMM" />
+
+            <com.etologic.mahjongscoring2.app.custom_views.CustomDiscarderSelector
+                android:id="@+id/cdsGameHuDialog"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal">
+                android:layout_below="@+id/tvGameHuDialogDiscarderText" />
 
-                <TextView
-                    android:id="@+id/tvGameHuDialogWinnerText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true"
-                    android:text="@string/winner_"
-                    android:textColor="@color/grayMM" />
+            <View
+                android:id="@+id/vGameHuDialogSeparator2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/cdsGameHuDialog"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:background="@color/gray" />
 
-                <include
-                    android:id="@+id/iGameHuDialogWinnerContainer"
-                    layout="@layout/custom_table_seat_medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvGameHuDialogWinnerText"
-                    android:layout_centerHorizontal="true" />
+            <TextView
+                android:id="@+id/tvGameHuDialogPointsText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/vGameHuDialogSeparator2"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:text="@string/points_"
+                android:textColor="@color/grayMM" />
 
-                <View
-                    android:id="@+id/vGameHuDialogSeparator1"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@+id/iGameHuDialogWinnerContainer"
-                    android:layout_marginTop="@dimen/half_standard_margin"
-                    android:background="@color/gray" />
+            <com.etologic.mahjongscoring2.app.custom_views.CustomNumPad
+                android:id="@+id/cnpGameHuDialog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvGameHuDialogPointsText"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center" />
 
-                <TextView
-                    android:id="@+id/tvGameHuDialogDiscarderText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/vGameHuDialogSeparator1"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginStart="@dimen/half_standard_margin"
-                    android:layout_marginTop="@dimen/half_standard_margin"
-                    android:layout_marginEnd="@dimen/half_standard_margin"
-                    android:layout_marginBottom="@dimen/half_standard_margin"
-                    android:text="@string/discarder_"
-                    android:textColor="@color/grayMM" />
+            <Button
+                android:id="@+id/btGameHuDialogCancel"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cnpGameHuDialog"
+                android:layout_marginTop="@dimen/standard_margin"
+                android:layout_toStartOf="@+id/btGameHuDialogOk"
+                android:background="@android:color/transparent"
+                android:text="@string/close"
+                android:textColor="@color/colorAccent" />
 
-                <com.etologic.mahjongscoring2.app.custom_views.CustomDiscarderSelector
-                    android:id="@+id/cdsGameHuDialog"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvGameHuDialogDiscarderText" />
+            <Button
+                android:id="@+id/btGameHuDialogOk"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cnpGameHuDialog"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="@dimen/standard_margin"
+                android:background="@android:color/transparent"
+                android:text="@string/save" />
 
-                <View
-                    android:id="@+id/vGameHuDialogSeparator2"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@+id/cdsGameHuDialog"
-                    android:layout_marginTop="@dimen/half_standard_margin"
-                    android:background="@color/gray" />
-
-                <TextView
-                    android:id="@+id/tvGameHuDialogPointsText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/vGameHuDialogSeparator2"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/half_standard_margin"
-                    android:text="@string/points_"
-                    android:textColor="@color/grayMM" />
-
-                <com.etologic.mahjongscoring2.app.custom_views.CustomNumPad
-                    android:id="@+id/cnpGameHuDialog"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvGameHuDialogPointsText"
-                    android:layout_centerHorizontal="true"
-                    android:layout_gravity="center" />
-
-                <Button
-                    android:id="@+id/btGameHuDialogCancel"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/cnpGameHuDialog"
-                    android:layout_marginTop="@dimen/standard_margin"
-                    android:layout_toStartOf="@+id/btGameHuDialogOk"
-                    android:background="@android:color/transparent"
-                    android:text="@string/close"
-                    android:textColor="@color/colorAccent" />
-
-                <Button
-                    android:id="@+id/btGameHuDialogOk"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/cnpGameHuDialog"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="@dimen/standard_margin"
-                    android:background="@android:color/transparent"
-                    android:text="@string/save" />
-
-            </RelativeLayout>
-
-        </ScrollView>
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</ScrollView>
