--- a/app/src/main/res/layout/game_dialog_penalty_fragment.xml
+++ b/app/src/main/res/layout/game_dialog_penalty_fragment.xml
@@ -14,110 +14,103 @@
   ~     You should have received a copy of the GNU General Public License
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:fadeScrollbars="false"
+    android:fadingEdgeLength="@dimen/standard_margin"
+    android:requiresFadingEdge="vertical"
+    android:scrollIndicators="end"
+    android:scrollbars="vertical"
     tools:background="@color/blackTransparent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/second_standard_margin"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/standard_margin"
         app:cardBackgroundColor="@color/grayLight"
         app:cardCornerRadius="@dimen/half_standard_margin"
         app:cardMaxElevation="8dp"
         app:contentPadding="@dimen/standard_margin">
 
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fadeScrollbars="false"
-            android:fadingEdgeLength="@dimen/standard_margin"
-            android:requiresFadingEdge="vertical"
-            android:scrollIndicators="end"
-            android:scrollbars="vertical">
+            android:gravity="center_horizontal">
 
-            <RelativeLayout
+            <include
+                android:id="@+id/iPenaltyDialogPlayerContainer"
+                layout="@layout/custom_table_seat_medium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal">
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
 
-                <include
-                    android:id="@+id/iPenaltyDialogPlayerContainer"
-                    layout="@layout/custom_table_seat_medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerHorizontal="true" />
+            <View
+                android:id="@+id/vPenaltyDialogSeparator2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/iPenaltyDialogPlayerContainer"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:background="@color/gray" />
 
-                <View
-                    android:id="@+id/vPenaltyDialogSeparator2"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@+id/iPenaltyDialogPlayerContainer"
-                    android:layout_marginTop="@dimen/half_standard_margin"
-                    android:background="@color/gray" />
+            <TextView
+                android:id="@+id/tvPenaltyDialogPointsText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/vPenaltyDialogSeparator2"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/half_standard_margin"
+                android:text="@string/points_"
+                android:textColor="@color/grayMM" />
 
-                <TextView
-                    android:id="@+id/tvPenaltyDialogPointsText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/vPenaltyDialogSeparator2"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/half_standard_margin"
-                    android:text="@string/points_"
-                    android:textColor="@color/grayMM" />
+            <com.etologic.mahjongscoring2.app.custom_views.CustomNumPad
+                android:id="@+id/cnpPenaltyDialog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvPenaltyDialogPointsText"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:inputType="numberDecimal"
+                android:maxLength="4"
+                android:maxLines="1" />
 
-                <com.etologic.mahjongscoring2.app.custom_views.CustomNumPad
-                    android:id="@+id/cnpPenaltyDialog"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tvPenaltyDialogPointsText"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center"
-                    android:inputType="numberDecimal"
-                    android:maxLength="4"
-                    android:maxLines="1" />
+            <CheckBox
+                android:id="@+id/cbPenaltyDialog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cnpPenaltyDialog"
+                android:layout_alignStart="@+id/cnpPenaltyDialog"
+                android:layout_marginTop="@dimen/standard_margin"
+                android:checked="true"
+                android:text="@string/divided" />
 
-                <CheckBox
-                    android:id="@+id/cbPenaltyDialog"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/cnpPenaltyDialog"
-                    android:layout_alignStart="@+id/cnpPenaltyDialog"
-                    android:layout_marginTop="@dimen/standard_margin"
-                    android:checked="true"
-                    android:text="@string/divided" />
+            <Button
+                android:id="@+id/btPenaltyDialogCancel"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cbPenaltyDialog"
+                android:layout_toStartOf="@+id/btPenaltyDialogSave"
+                android:background="@android:color/transparent"
+                android:text="@string/close"
+                android:textColor="@color/colorAccent" />
 
-                <Button
-                    android:id="@+id/btPenaltyDialogCancel"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/cbPenaltyDialog"
-                    android:layout_toStartOf="@+id/btPenaltyDialogSave"
-                    android:background="@android:color/transparent"
-                    android:text="@string/close"
-                    android:textColor="@color/colorAccent" />
+            <Button
+                android:id="@+id/btPenaltyDialogSave"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cbPenaltyDialog"
+                android:layout_alignParentEnd="true"
+                android:background="@android:color/transparent"
+                android:text="@string/save" />
 
-                <Button
-                    android:id="@+id/btPenaltyDialogSave"
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/cbPenaltyDialog"
-                    android:layout_alignParentEnd="true"
-                    android:background="@android:color/transparent"
-                    android:text="@string/save" />
-
-            </RelativeLayout>
-
-        </ScrollView>
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</ScrollView>
