--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -15,30 +15,31 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_current_game"
+            android:id="@+id/gameFragment"
             android:icon="@drawable/ic_play_arrow_white_24px"
             android:iconTint="@color/black"
             android:visible="false"
             tools:targetApi="o" />
 
         <item
-            android:id="@+id/nav_old_games"
+            android:id="@+id/oldGamesFragment"
             android:icon="@drawable/ic_history_black_24px"
             android:title="@string/old_games"
             android:visible="true" />
 
         <item
-            android:id="@+id/nav_combinations"
+            android:id="@+id/combinationsFragment"
             android:icon="@drawable/ic_format_list_numbered_black_24dp"
             android:title="@string/combinations" />
 
         <item
-            android:id="@+id/nav_diffs_calculator"
+            android:id="@+id/diffsCalculatorFragment"
             android:icon="@drawable/ic_calc"
             android:title="@string/diffsCalculator" />
 
