--- a/app/src/main/res/drawable/ic_play_arrow_white_24px.xml
+++ b/app/src/main/res/drawable/ic_play_arrow_white_24px.xml
@@ -21,6 +21,6 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="@color/white"
         android:pathData="M8,5v14l11,-7z" />
 </vector>
